--- a/labb.ipynb
+++ b/labb.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,12 @@
       "The best information gain for monk1 is : 0.28703074971578435 \n",
       " The best information gain for monk2 is : 0.01727717693791797 \n",
       " The best information gian for monk3 is : 0.28703074971578435\n",
-      "The attribute with the highest information gain is : 5\n"
+      "The attribute with the highest information gain for monk1 is : 5\n",
+      "\n",
+      "The attribute with the highest information gain for monk2 is : 5 \n",
+      "\n",
+      "The attribute with the highest information gain for monk3 is : 2\n",
+      "\n"
      ]
     }
    ],
@@ -59,7 +64,11 @@
     "monk_3_gains=[dt.averageGain(m.monk3,attribute) for attribute in m.attributes]\n",
     "print(f'The best information gain for monk1 is : {max(monk_1_gains)} \\n The best information gain for monk2 is : {max(monk_2_gains)} \\n The best information gian for monk3 is : {max(monk_1_gains)}')\n",
     "a=max(monk_1_gains)\n",
-    "print(f'The attribute with the highest information gain is : {monk_1_gains.index(a)+1}')"
+    "b=max(monk_2_gains)\n",
+    "c=max(monk_3_gains)\n",
+    "print(f'The attribute with the highest information gain for monk1 is : {monk_1_gains.index(a)+1}\\n')\n",
+    "print(f'The attribute with the highest information gain for monk2 is : {monk_2_gains.index(b)+1} \\n')\n",
+    "print(f'The attribute with the highest information gain for monk3 is : {monk_3_gains.index(c)+1}\\n')"
    ]
   },
   {
