added all files

--- a/LAB3/lab3.ipynb
+++ b/LAB3/lab3.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,7 @@
     "from scipy import misc\n",
     "from imp import reload\n",
     "from labfuns import *\n",
-    "import random"
+    "import random\n"
    ]
   },
   {
@@ -104,7 +104,23 @@
     "\n",
     "    # TODO: fill in the code to compute mu and sigma!\n",
     "    # ==========================\n",
-    "    \n",
+    "    \" Lets start with finding mu:\"\n",
+    "\n",
+    "    for i,k in enumerate(classes):\n",
+    "        X_k=X[labels=k]\n",
+    "        N_k = np.sum(labels == k)\n",
+    "        mu[i] = np.mean(X_k, axis=0)\n",
+    "\n",
+    "\n",
+    "    \"Now the correlation matrix\"\n",
+    "\n",
+    "    for i,k in enumerate(classes)\n",
+    "        X_k=X[labels=k]\n",
+    "        N_k = np.sum(labels == k)\n",
+    "\n",
+    "        variance=np.sum((X_k-mu[i])**2,axis=0)/N_k\n",
+    "\n",
+    "        sigma[i] = np.diag(variance)\n",
     "    # ==========================\n",
     "\n",
     "    return mu, sigma\n",
@@ -173,11 +189,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mlParams' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatplotlib\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124minline\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m X, labels \u001b[38;5;241m=\u001b[39m genBlobs(centers\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m mu, sigma \u001b[38;5;241m=\u001b[39m \u001b[43mmlParams\u001b[49m(X,labels)\n\u001b[1;32m      5\u001b[0m plotGaussian(X,labels,mu,sigma)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mlParams' is not defined"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -518,21 +546,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
